--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.9.3",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
@@ -15,7 +16,6 @@
     "feather-icons": "^4.28.0",
     "firebase": "^8.3.1",
     "framer-motion": "^4.1.5",
-    "node-sass": "^4.14.1",
     "react": "^17.0.2",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-awesome-slider": "^4.1.0",
@@ -30,6 +30,7 @@
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
+    "sass": "^1.53.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.2.3",
     "tailwindcss": "^2.1.1",
